[project]
name = "ruff-lsp-bug-repro"
description = "minimal repro setup"
version = "0.1.0"
authors = [{ name = "KB", email = "kb@example.com" }]
dependencies = []

[project.optional-dependencies]
dev = []

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
  "F",   # pyflakes, for unused variables
  "N",   # pep8-naming, for notSoAwesomelyNamedFunctions
]
